# HackAttack-Valueloop

./: .coverage  AGENTS.md  Makefile  README.md  ValueLoop_Master_Implementation_Blueprint_FULL.md  context.md  design.md  skills-lock.json
.agents/: README.md
.agents/memories/: README.md
.agents/plugins/: README.md
.agents/subagents/: README.md
.codex/: config.toml
.github/workflows/: ci.yml
docs/: ValueLoop_ML_Churn_Report.md  ValueLoop_Master_Implementation_Blueprint_FULL.md  testing.md
ml/: README.md  explain.py  features.py  registry.py  synth.py  train.py
policies/: actions.yaml  cause_rules.yaml
scripts/: seed_demo.py
services/api/: .env.example  .gitignore  README.md  pyproject.toml
services/api/app/: config.py  deps.py  main.py
services/api/app/api/v1/: accounts.py  actions.py  analyze.py  audit.py  causes.py  dashboard.py  health.py  ingestion.py  interventions.py  outcomes.py  risks.py  router.py  timeline.py
services/api/app/core/: db.py  errors.py  logging.py
services/api/app/models/: __init__.py  domain.py  envelope.py
services/api/app/modules/: actions.py  causes.py  customer360.py  health.py  ingestion.py  interventions.py  outcomes.py  policy.py  risk.py
services/api/supabase/migrations/: 20260719183128_00001_initial_schema.sql
services/api/tests/: conftest.py  test_accounts.py  test_causes.py  test_contract_security.py  test_end_to_end.py  test_endpoints.py  test_health.py  test_ingestion.py  test_interventions.py  test_performance.py  test_policy.py  test_risks.py  test_smoke.py  test_unit_modules.py
(+53 files in other folders)
