[project]
name = "valueloop-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "supabase==2.10.0",
    "pandas==2.2.3",
    "pyyaml==6.0.2",
    "structlog==24.4.0",
    "uvicorn[standard]==0.32.0",
    "python-multipart==0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "httpx==0.27.2",
    "pytest-asyncio==0.24.0",
    "ruff==0.7.4",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["app/api/v1/__init__.py"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_empty = true
